# NeMo2

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: NeMo2Config.cmake.in  NeMo2Helpers.cmake
include/: CK2dCurve.h  CKBeObject.h  CKBehavior.h  CKBehaviorIO.h  CKBehaviorLink.h  CKBehaviorPrototype.h  CKBitmapData.h  CKContext.h  CKDataArray.h  CKDirectoryParser.h  CKGlobals.h  CKGroup.h  CKLevel.h  CKMemoryPool.h  CKMidiSound.h  CKObject.h  CKObjectArray.h  CKParameter.h  CKParameterIn.h  CKParameterLocal.h  CKParameterOperation.h  CKParameterOut.h  CKPathSplitter.h  CKRasterizer.h  CKScene.h  CKSceneObject.h  CKSound.h  CKStateChunk.h  CKSynchroObject.h  CKTimeProfiler.h  CKTypes.h  CKVertexBuffer.h  CKWaveSound.h  VxConfiguration.h  VxEndian.h  VxMath.h  VxMathCompiler.h  VxMathDefines.h  VxMatrix.h  VxMemory.h  (+17 more)
src/: CKAttributeManager.cpp  CKBeObject.cpp  CKBehavior.cpp  CKBehaviorIO.cpp  CKBehaviorLink.cpp  CKBehaviorManager.cpp  CKBehaviorPrototype.cpp  CKBitmapData.cpp  CKCallbackFunctions.cpp  CKContext.cpp  CKDataArray.cpp  CKDebugContext.cpp  CKDependencies.cpp  CKFile.cpp  CKGlobals.cpp  CKGroup.cpp  CKInterfaceObjectManager.cpp  CKJpegDecoder.cpp  CKLevel.cpp  CKMessage.cpp  CKMessageManager.cpp  CKMidiSound.cpp  CKObjectArray.cpp  CKObjectManager.cpp  CKParameter.cpp  CKParameterIn.cpp  CKParameterLocal.cpp  CKParameterManager.cpp  CKParameterOperation.cpp  CKParameterOut.cpp  CKPathManager.cpp  CKPluginManager.cpp  CKScene.cpp  CKSound.cpp  CKStateChunk.cpp  CKWaveSound.cpp  CMakeLists.txt  XObjectArray.cpp
src/CK2/: CK2Posix.cpp  CK2dCurve.cpp  CKBeObject.cpp  CKBehavior.cpp  CKBehaviorIO.cpp  CKBehaviorLink.cpp  CKContext.cpp  CKDataArray.cpp  CKFile.cpp  CKGlobals.cpp  CKGroup.cpp  CKLevel.cpp  CKMemoryPool.cpp  CKMidiSound.cpp  CKObject.cpp  CKParameter.cpp  CKParameterIn.cpp  CKParameterLocal.cpp  CKParameterOperation.cpp  CKParameterOut.cpp  CKScene.cpp  CKSceneObject.cpp  CKSound.cpp  CKSynchroObject.cpp  CKWaveSound.cpp  CMakeLists.txt  XObjectArray.cpp
src/CK2_3D/: CK2_3D.cpp  CK2dEntity.cpp  CK3dEntity.cpp  CKAnimation.cpp  CKBodyPart.cpp  CKCamera.cpp  CKCharacter.cpp  CKCurve.cpp  CKCurvePoint.cpp  CKGrid.cpp  CKKeyedAnimation.cpp  CKKinematicChain.cpp  CKLayer.cpp  CKLight.cpp  CKMaterial.cpp  CKMesh.cpp  CKObjectAnimation.cpp  CKPatchMesh.cpp  CKPlace.cpp  CKRenderContext.cpp  CKRenderEngineTypes.h  CKRenderObject.cpp  CKSprite.cpp  CKSprite3d.cpp  CKSpriteText.cpp  CKTargetCamera.cpp  CKTargetLight.cpp  CKTexture.cpp  CKVertexBuffer.cpp  CMakeLists.txt  RCK2dEntity.h  RCK3dEntity.h  RCKAnimation.h  RCKBodyPart.h  RCKCamera.h  RCKCharacter.h  RCKCurve.h  RCKCurvePoint.h  RCKGrid.h  RCKKeyedAnimation.h  (+17 more)
src/CK2_3D/CKRasterizer/: CMakeLists.txt
src/CK2_3D/CKRasterizer/CKDX9Rasterizer/: CMakeLists.txt
src/CK2_3D/CKRasterizer/CKRasterizerLib/: CKRasterizer.cpp  CKRasterizerContext.cpp  CMakeLists.txt
src/VxMath/: CKDirectoryParser.cpp  CKPathSplitter.cpp  CMakeLists.txt  EscapeURL.cpp  VxBlitEngine.cpp  VxConfiguration.cpp  VxDistance.cpp  VxEigenMatrix.h  VxFrustum.cpp  VxGraphicUtils.cpp  VxIntersect_BoxBox.cpp  VxIntersect_FaceFace.cpp  VxIntersect_Frustum.cpp  VxIntersect_Sphere.cpp  VxMath.cpp  VxMatrix.cpp  VxMemory.cpp  VxMemoryMappedFilePosix.cpp  VxProcessor.cpp  VxSIMD.cpp  VxSIMD.h  VxSIMD.inl  VxSIMD_AVX.cpp  VxSIMD_SSE.cpp  VxSharedLibraryPosix.cpp  VxThreadPosix.cpp  VxThreadWin32.cpp  VxTimeProfilerPosix.cpp  VxWindowFunctionsPosix.cpp  VxWindowFunctionsWin32.cpp  XString.cpp
tests/: ArrayTest.cpp  CMakeLists.txt  DistanceTest.cpp  FrustumTest.cpp  GeometryTest.cpp  ImageTest.cpp  IntersectionTest.cpp  MatrixTest.cpp  MemoryMappedFileTest.cpp  PathParsingTest.cpp  PlaneTest.cpp  PlayerTest.cpp  QuaternionTest.cpp  StringTest.cpp  SystemInfoTest.cpp  VectorTest.cpp
tests/VxMath/: ArrayTest.cpp  BlitEngineTestHelpers.h  CMakeLists.txt  FrustumTest.cpp  HashTableTest.cpp  ImageTest.cpp  SIMDDispatchConsistencyTest.cpp  SIMDFeatureTest.cpp  SIMDMatrixTest.cpp  SIMDPixelTest.cpp  SIMDQuaternionTest.cpp  SIMDTestCommon.h  SIMDVectorTest.cpp  StringTest.cpp  URLTest.cpp  WindowTest.cpp
